change deprecated methods